--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,8 @@
+* {
+	margin: 0;
+	padding: 0;
+}
+
 html {
 	background: #fff;
 	color: #000;
@@ -6,6 +11,8 @@ html {
 }
 body {
 	margin: 0;
+	font-family: 'Roboto', sans-serif;
+	font-size: 14px;
 }
 
 @font-face {
@@ -20,6 +27,34 @@ body {
 	font-weight: normal;
 	font-style: normal;
 }
+
+@font-face {
+	font-family: "Roboto";
+	src: url("../fonts/Roboto/robotocondensed.eot");
+	src: local('O'),
+	url("../fonts/Roboto/robotocondensed.eot?") format("embedded-opentype"),
+	url("../fonts/Roboto/robotocondensed.woff") format("woff"),
+	url("../fonts/Roboto/robotocondensed.woff2") format("woff2"),
+	url("../fonts/Roboto/robotocondensed.ttf") format("truetype"),
+	url("../fonts/Roboto/robotocondensed.svg") format("svg");
+	font-weight: normal;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: "Roboto";
+	src: url("../fonts/Roboto/robotocondensedbold.eot");
+	src: local('O'),
+	url("../fonts/Roboto/robotocondensedbold.eot?") format("embedded-opentype"),
+	url("../fonts/Roboto/robotocondensedbold.woff") format("woff"),
+	url("../fonts/Roboto/robotocondensedbold.woff2") format("woff2"),
+	url("../fonts/Roboto/robotocondensedbold.ttf") format("truetype"),
+	url("../fonts/Roboto/robotocondensedbold.svg") format("svg");
+	font-weight: bold;
+	font-style: normal;
+}
+
+
 @font-face {
 	font-family: 'Glyphicons Halflings';
 	src: url('../bootstrap/fonts/glyphicons-halflings-regular.eot');
@@ -78,16 +113,74 @@ input[type="radio"] {
 	-webkit-appearance: radio;
 }
 
+.container{
+	width: 100%;
+	max-width: 1300px;
+	margin: auto;
+}
+
 header{
+	width: 100%;
+	background-color: #ffcc33;
+	position: relative;
+	height: 54px;
+}
+
+nav{
+	padding-left: 5%;
+}
+
+nav ul{
+	margin: 0;
+}
+
+nav li.itemMenu:hover{
+	background: #ffe23b;
+}
+
+
+
+nav li.phone{
+	float: right;
+	display: block;
+	padding-right: 7%;
+	width: -webkit-calc(5% + 10px);
+	width: -moz-calc(5% + 10px);
+	padding-right: calc(5% + 10px);
+	font-size: 1.4em;
+	color: white;
+	width: 125px;
+}
+
+nav li{
+	list-style: none;
+	display: inline-block;
+	text-shadow: 1px 1px 0px rgba(0, 0, 0, 1);
+	filter: Shadow(Color=#121212, Direction=130, Strength=1);
+	padding: 15px 10px;
+}
+
+nav li a{
+	text-decoration: none;
+	color: white;
+	font-size: 1.3em;
+	font-weight: bold;
+	padding: 15px 10px;
+}
+
+nav li a:hover, nav li a:active {
+	text-decoration: none;
+}
+
+.topWrapper{
 	width: 100%;
 	min-height: 350px;
 	background: url("../image/oavv3DC.jpg");
-
 }
 
-.wrapper{
+.projectsWrapper{
 	width: 100%;
-	min-height: 550px;
+	min-height: 850px;
 	background: url("../image/white.png") repeat;
 	background-size: contain;
 }
