--- a/css/style.css
+++ b/css/style.css
@@ -237,11 +237,6 @@ nav li a:hover, nav li a:active {
 	color: white;
 }
 
-.contentTopWrapper {
-	/*position: absolute;*/
-	/*top: 25%;*/
-
-}
 
 .contentTopWrapper:after {
 	clear: both;
@@ -277,7 +272,6 @@ nav li a:hover, nav li a:active {
 	height: 90px;
 	padding-left: 3%;
 	font-size: 1.3em;
-	/*display: inline-block;*/
 	display:table-cell;
 	vertical-align: middle;
 	line-height: 1.5;
@@ -295,7 +289,6 @@ nav li a:hover, nav li a:active {
 
 .itemProjects{
 	margin-top: 3%;
-	height: 100%;
 	padding-top: 3%;
 	padding-bottom: 3%;
 	background: rgba(212, 240, 255, 0.4);
@@ -352,4 +345,46 @@ nav li a:hover, nav li a:active {
 .imageItemProjects img{
 	width: 100%;
 	max-width: 500px;
+}
+
+.titleProjectsWrapper{
+	display: none;
+}
+
+
+/* contacts */
+
+.wrapperContacts{
+	background-color: #203748;
+	color: white;
+}
+
+.wrapperContacts h2{
+	text-shadow: 1px 1px 0px rgba(0, 0, 0, 1);
+	padding: 3% 0;
+	font-size: 1.7em;
+}
+
+.contacts{
+	padding-left: 5.5%;
+	padding-left: -webkit-calc(5% + 10px);
+	padding-left: -moz-calc(5% + 10px);
+	padding-left: calc(5% + 10px);
+	padding-bottom: 2%;
+	text-shadow: 1px 1px 0px rgba(0, 0, 0, 1);
+}
+
+.contacts div{
+	padding-bottom: 2%;
+	font-size: 1.3em;
+}
+
+.fa-envelope{
+	font-size: 17px;
+	padding-right: 15px;
+}
+
+.fa-phone{
+	font-size: 20px;
+	padding-right: 15px;
 }
