--- a/css/style.css
+++ b/css/style.css
@@ -232,6 +232,7 @@ nav li a:hover, nav li a:active {
 
 .topWrapper {
 	width: 100%;
+	height: 330px;
 	background: url("../image/oavv3DC.jpg");
 	color: white;
 }
@@ -281,7 +282,6 @@ nav li a:hover, nav li a:active {
 
 .projectsWrapper {
 	width: 100%;
-	min-height: 850px;
 	background: url("../image/white.png") repeat;
 	background-size: contain;
 }
